--- a/Projeto_nintendo.ipynb
+++ b/Projeto_nintendo.ipynb
@@ -2291,7 +2291,7 @@
       "source": [
         "O objetivo deste código é identificar os jogos com melhor avaliação com base na mídia (Site Meta) e criar um gráfico de barras ajuda a entender a distribuição.\n",
         "\n",
-        "A partir dessa visualização é possível entender que o \"Zelda: Ocarina of time\" é um dos melhores jogos já lançados, com a incrível nota de 99.0, nenhum outro jogo atingiu esse patamar. Mas não podemos deixar de olhar também para os jogos com avaliação de 97.0, que são jogos tão bons quanto Zelda, e por incrível que pareça, todos os jogos desta lista são da Nintendo. Anteriormente vimos que a quantidade de lançamentos diminuiu bastante, mas em compensação, a qualidade dos jogos aumento drásticamente."
+        "A partir dessa visualização é possível entender que o \"Zelda: Ocarina of time\" é um dos melhores jogos já lançados, com a incrível nota de 99.0, nenhum outro jogo atingiu esse patamar. Mas não podemos deixar de olhar também para os jogos com avaliação de 97.0, que são jogos tão bons quanto Zelda, e por incrível que pareça, todos os jogos desta lista são da Nintendo. Anteriormente vimos que a quantidade de lançamentos diminuiu bastante, mas em compensação, a qualidade dos jogos aumentou drásticamente."
       ],
       "metadata": {
         "id": "HyMOrkGTEVX0"
