--- a/Projeto_nintendo.ipynb
+++ b/Projeto_nintendo.ipynb
@@ -1395,7 +1395,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Contagem de frequência de plataformas"
+        "# Frequência de plataformas"
       ],
       "metadata": {
         "id": "ktE6aySkDjpO"
